# New_test

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/app/: main.py
backend/src/app/api/: deps.py  routes.py
backend/src/app/config/: scheduler.py
backend/src/app/core/: config.py  logging.py
backend/src/app/db/: models.py  schemas.py  session.py
backend/src/app/services/: search.py
backend/src/app/services/ingest/: normalizer.py  reddit_ingestor.py  rss_ingestor.py  telegram_ingestor.py  web_crawler.py
backend/src/app/services/nlp/: embeddings.py  signals.py
backend/src/app/services/nlp/summarizer/: __init__.py  adapter_base.py  hf_adapter.py  ollama_adapter.py  openai_adapter.py
backend/src/app/utils/: simhash.py
backend/src/app/workers/: queue.py  tasks.py
backend/tests/: test_api_articles.py  test_dedupe.py  test_summarizer.py
frontend/: Dockerfile  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/article/[id]/: page.tsx
frontend/app/search/: page.tsx
frontend/app/sources/: page.tsx
frontend/components/: ArticleList.tsx  Navbar.tsx
frontend/lib/: api.ts
infra/: init.sql
